--- a/strips.local.yml
+++ b/strips.local.yml
@@ -2,7 +2,7 @@
 
 driver:
   typename: simpixel
-  num: 600
+  num: 800
 
 aliases:
   bpa: BiblioPixelAnimations.matrix
@@ -17,7 +17,7 @@ animation:
       tail: 1
       growthRate: 1
       run:
-        fps: 30
+        fps: 10
       palette:
         colors:
           - royal blue 1
@@ -25,7 +25,7 @@ animation:
       tail: 1
       growthRate: 1
       run:
-        fps: 30
+        fps: 10
       palette:
         colors:
           - red
@@ -33,7 +33,7 @@ animation:
       tail: 1
       growthRate: 1
       run:
-        fps: 30
+        fps: 10
       palette:
         colors:
           - green
@@ -62,7 +62,7 @@ animation:
 
 layout:
   typename: matrix
-  serpentine: false
-  width: 6
-  height: 100
+  serpentine: true
+  width: 200
+  height: 4
   brightness: 255
