--- a/strips.yml
+++ b/strips.yml
@@ -16,13 +16,13 @@ path: ./animations/
 
 animation:
   typename: mixer
-  levels: [0, 0, 0, 1]
+  levels: [0, 0, 0, 1, 0]
   animations:
     - typename: $bpa.MatrixRain.MatrixRain
       tail: 1
       growthRate: 1
       run:
-        fps: 30
+        fps: 10
       palette:
         colors:
           - royal blue 1
@@ -30,7 +30,7 @@ animation:
       tail: 1
       growthRate: 1
       run:
-        fps: 30
+        fps: 10
       palette:
         colors:
           - red
@@ -38,13 +38,19 @@ animation:
       tail: 1
       growthRate: 1
       run:
-        fps: 30
+        fps: 10
       palette:
         colors:
           - green
     - typename: entry.Entry
       run:
         fps: 60
+      palette:
+        colors: rainbow
+    - typename: strips.Combo
+      name: Combo
+      run:
+        fps: 100
       palette:
         colors: rainbow
   #typename: sequence
@@ -67,7 +73,7 @@ animation:
 
 layout:
   typename: matrix
-  serpentine: true
+  serpentine: false
   width: 200
   height: 4
   brightness: 255
