--- a/strips.local.yml
+++ b/strips.local.yml
@@ -1,8 +1,15 @@
 # Local config for testing patterns
 
-driver:
-  typename: simpixel
-  num: 800
+# driver:
+#   typename: simpixel
+#   num: 800
+
+drivers:
+  - c_order: GRB
+    num: 800
+    ledtype: WS2811
+    typename: .serial
+    dev: /dev/tty.usbmodem60460901
 
 aliases:
   bpa: BiblioPixelAnimations.matrix
@@ -11,43 +18,76 @@ path: ./animations/
 
 animation:
   typename: mixer
-  levels: [0, 0, 0, 1, 0]
+  levels: [1]
+  # levels: [1, 1]
+  # levels: [0, 0, 1]
   animations:
-    - typename: $bpa.MatrixRain.MatrixRain
-      tail: 1
-      growthRate: 1
+    # - typename: $bpa.MatrixRain.MatrixRain
+    #   tail: 1
+    #   growthRate: 1
+    #   run:
+    #     fps: 10
+    #   palette:
+    #     colors:
+    #       - royal blue 1
+    # - typename: $bpa.MatrixRain.MatrixRain
+    #   tail: 1
+    #   growthRate: 1
+    #   run:
+    #     fps: 10
+    #   palette:
+    #     colors:
+    #       - red
+    # - typename: $bpa.MatrixRain.MatrixRain
+    #   tail: 1
+    #   growthRate: 1
+    #   run:
+    #     fps: 10
+    #   palette:
+    #     colors:
+    #       - green
+
+    # - typename: entry.Entry
+    #   run:
+    #     fps: 120
+    #   palette:
+    #     colors: rainbow
+
+    # - typename: strips.Combo
+    #   name: Combo
+    #   run:
+    #     fps: 100
+    #   palette:
+    #     colors: rainbow
+
+    # - typename: strips.Embers
+    #   name: Embers
+    #   run:
+    #     fps: 100
+    #   palette:
+    #     colors: rainbow
+
+    - typename: bach.Wave
+      name: Wave
       run:
-        fps: 10
-      palette:
-        colors:
-          - royal blue 1
-    - typename: $bpa.MatrixRain.MatrixRain
-      tail: 1
-      growthRate: 1
-      run:
-        fps: 10
-      palette:
-        colors:
-          - red
-    - typename: $bpa.MatrixRain.MatrixRain
-      tail: 1
-      growthRate: 1
-      run:
-        fps: 10
-      palette:
-        colors:
-          - green
-    - typename: entry.Entry
-      run:
-        fps: 60
+        fps: 120
       palette:
         colors: rainbow
-    - typename: strips.Combo
-      name: Combo
-      run:
-        fps: 100
-      palette:
-        colors: rainbow
+
+    # - typename: bach.Sparks
+    #   name: Sparks
+    #   run:
+    #     fps: 120
+    #   palette:
+    #     colors: rainbow
+
+    # - typename: bach.Bump
+    #   name: Bump
+    #   run:
+    #     fps: 100
+    #   palette:
+    #     colors: rainbow
+
   #typename: sequence
   #length: 30
   #run:
@@ -59,6 +99,7 @@ animation:
   #    fps: 60
   #  palette:
   #    colors: rainbow
+
   #typename: strips.Combo
   #name: Combo
   #run:
@@ -69,6 +110,6 @@ animation:
 layout:
   typename: matrix
   serpentine: false
-  width: 200
-  height: 4
+  width: 100
+  height: 8
   brightness: 255
