increase reliability of button presses

--- a/strips.local.yml
+++ b/strips.local.yml
@@ -4,6 +4,13 @@ driver:
   typename: simpixel
   num: 800
 
+  #drivers:
+  #  - c_order: GRB
+  #    num: 800
+  #    ledtype: WS2811
+  #    typename: .serial
+  #    dev: /dev/tty.usbmodem60460901
+
 aliases:
   bpa: BiblioPixelAnimations.matrix
 
@@ -44,7 +51,7 @@ animation:
     - typename: bach.Embers
       name: Embers
       run:
-        fps: 100
+        fps: 60
       palette:
         colors: rainbow
 
