--- a/strips.local.yml
+++ b/strips.local.yml
@@ -18,7 +18,7 @@ path: ./animations/
 
 animation:
   typename: mixer
-  levels: [1]
+  levels: [1, 1, 1]
   animations:
 
     # - typename: entry.Entry
@@ -34,19 +34,19 @@ animation:
     #   palette:
     #     colors: rainbow
 
-    # - typename: bach.Wave
-    #   name: Wave
-    #   run:
-    #     fps: 100
-    #   palette:
-    #     colors: rainbow
+    - typename: bach.Wave
+      name: Wave
+      run:
+        fps: 100
+      palette:
+        colors: rainbow
 
-    # - typename: bach.Sparks
-    #   name: Sparks
-    #   run:
-    #     fps: 100
-    #   palette:
-    #     colors: rainbow
+    - typename: bach.Sparks
+      name: Sparks
+      run:
+        fps: 100
+      palette:
+        colors: rainbow
 
     - typename: bach.Embers
       name: Embers
