Update configs to use all animations

--- a/strips.local.yml
+++ b/strips.local.yml
@@ -4,13 +4,6 @@ driver:
   typename: simpixel
   num: 800
 
-  #drivers:
-  #  - c_order: GRB
-  #    num: 800
-  #    ledtype: WS2811
-  #    typename: .serial
-  #    dev: /dev/tty.usbmodem60460901
-
 aliases:
   bpa: BiblioPixelAnimations.matrix
 
@@ -18,21 +11,15 @@ path: ./animations/
 
 animation:
   typename: mixer
-  levels: [1, 1, 1]
+  levels: [0, 1, 1, 1, 1]
   animations:
 
-    # - typename: entry.Entry
-    #   run:
-    #     fps: 100
-    #   palette:
-    #     colors: rainbow
-
-    # - typename: bach.Id
-    #   name: Id
-    #   run:
-    #     fps: 100
-    #   palette:
-    #     colors: rainbow
+    - typename: bach.MCP
+      name: MCP
+      run:
+        fps: 100
+      palette:
+        colors: rainbow
 
     - typename: bach.Wave
       name: Wave
@@ -50,6 +37,13 @@ animation:
 
     - typename: bach.Embers
       name: Embers
+      run:
+        fps: 100
+      palette:
+        colors: rainbow
+
+    - typename: entry.HydroPump
+      name: HydroPump
       run:
         fps: 60
       palette:
